	PR target/28764 	* mode-switching.c (optimize_mode_switching): Make the destination 	block of an abnormal edge have no anticipatable mode.  Don't 	insert mode switching code at the end of the source block of 	an abnormal edge.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116703 138bc75d-0d04-0410-961f-82ee72b054a4